Реализовано удаление квизов по дате их создания (вместе с квизом удаляется вся информация к нему привязанная: вопросы, ответы студентов и т.д.)

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1064,3 +1064,14 @@ COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
 
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
+
+COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
+COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
+COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"COM_JOOMLAQUIZ_CLEANING_FROM="Delete quizzes by date from:"
+COM_JOOMLAQUIZ_CLEANING_TO="Delete quizzes by date to:"
+COM_JOOMLAQUIZ_CLEANING_PARAMS="Cleaning params"
+COM_JOOMLAQUIZ_CLEANING_CLEANING="Clean database"
+COM_JOOMLAQUIZ_MENU_CLEANING="Database cleaning"
+COM_JOOMLAQUIZ_ADMINISTRATION_CLEANING="Database cleaning"
+COM_JOOMLAQUIZ_CLEANING_SUCCESS="Cleaning was successful"
+COM_JOOMLAQUIZ_CLEANING_DATE_ERROR="Date incorrect"
