fix lang constant

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -955,7 +955,7 @@ COM_JOOMLAQUIZ_NOPRODUCTSCREATED="No products created. "
 COM_JOOMLAQUIZ_CHOOSE_THE_QUIZCAT="Select the Quiz category from the list of the earlier created"
 COM_JOOMLAQUIZ_IF_THIS_OPTION="Enabling this option allows to skip the quiz description and start the quiz right with the questions"
 COM_JOOMLAQUIZ_FILL_REQUIRED="Please, fill required fields (marked with *)"
-COM_JOOMLAQUIZ_CHOOSE_TYPE="Please, choose the question type tyou wish to create."
+COM_JOOMLAQUIZ_CHOOSE_TYPE="Please, choose the question type you wish to create."
 COM_JOOMLAQUIZ_SELECT_STATUS="- Select question status -"
 COM_JOOMLAQUIZ_INVALIDE_QUESTION="Unpublished"
 COM_JOOMLAQUIZ_ACTIVE_QUESTION="Published"
