add probability new

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -34,6 +34,10 @@ COM_JOOMLAQUIZ_MENU_HELP="Help"
 COM_JOOMLAQUIZ_SUBMENU_HELP="Help"
 COM_JOOMLAQUIZ_SUBMENU_FAQ="F.A.Q."
 COM_JOOMLAQUIZ_POOL_RAND_DESCR="From drop-down list, select head category"
+COM_JOOMLAQUIZ_PROBABILITY_TOTAL_QUESTIONS_LABEL="Total number of questions<br>(for probability questions):"
+COM_JOOMLAQUIZ_PROBABILITY_TOTAL_QUESTIONS_DESC="Total number of questions<br>(for probability questions)"
+COM_JOOMLAQUIZ_PROBABILITY_TOTAL_PERCENTS_LABEL="By probability:"
+COM_JOOMLAQUIZ_PROBABILITY_TOTAL_PERCENTS_DESC="By probability."
 COM_JOOMLAQUIZ_ADMINISTRATION_SUPPORT_FORUM="Support forum"
 COM_JOOMLAQUIZ_ADMINISTRATION_SUPPORT_DESC="Support desk"
 COM_JOOMLAQUIZ_ADMINISTRATION_SUPPORT_REQUEST="Submit request"
