--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -90,6 +90,7 @@ COM_QUIZ_DISPLAY_NO="Display #"
 COM_QUIZ_FIRST="First"
 COM_QUIZ_LAST="Last"
 COM_QUIZ_MES_NOTAVAIL="Sorry, this option is not available now."
+COM_QUIZ_CERTIFICATE_FORM_MISSING="Certificate form not found. Please inform the site administrator about this."
 COM_QUIZ_MES_NOTPASSED="Sorry, you have not passed the quiz."
 COM_QUIZ_CERT_TOTAL="with a total score of"
 COM_QUIZ_CERT_PERCENT="percent"
