add page heading

--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -267,3 +267,6 @@ _UE_JOOMLAQUIZNOTINSTALLED="JoomlaQuiz Deluxe is not installed."
 COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
 
 COM_JOOMLAQUIZ_MEMORY_NOTSTARTED="Are you sure you want to give up without even trying?"
+
+COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
+COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
