--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.sys.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.sys.ini
@@ -23,6 +23,9 @@ COM_JOOMLAQUIZ_MENU_QUIZ_LAYOUT_DESCR="Use this layout to create menu item for s
 COM_JOOMLAQUIZ_MENU_LPATH_LAYOUT="Standard Learning Path Layout"
 COM_JOOMLAQUIZ_MENU_LPATH_LAYOUT_DESCR="Use this layout to create menu item for a learning path."
 
+COM_JOOMLAQUIZ_MENU_LPATHS_LAYOUT="Standard Learning Paths Layout"
+COM_JOOMLAQUIZ_MENU_LPATHS_LAYOUT_DESCR="Use this layout to create menu item for a learning paths."
+
 COM_JOOMLAQUIZ_MENU_PACKEGES_LAYOUT="Standard Quiz Packages Layout"
 COM_JOOMLAQUIZ_MENU_PACKEGES_LAYOUT_DESCR="Use this layout to create menu item to show list of user's packages."
 
