--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -263,3 +263,6 @@ _UE_MYQUIZZES_ALLOWED_TIME="Allowed time for this test is %s minutes"
 _UE_MYQUIZZES_NO_QUIZZES="No quizzes finished."
 _UE_JOOMLAQUIZNOTINSTALLED="JoomlaQuiz Deluxe is not installed."
 COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
+
+COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
+COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
