--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1051,12 +1051,12 @@ COM_JOOMLAQUIZ_INSERT_QUIZ_LABEL="Select quiz"
 
 COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
+COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
+COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 
-COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
-COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
-COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"COM_JOOMLAQUIZ_CLEANING_FROM="Delete quizzes by date from:"
+COM_JOOMLAQUIZ_CLEANING_FROM="Delete quizzes by date from:"
 COM_JOOMLAQUIZ_CLEANING_TO="Delete quizzes by date to:"
 COM_JOOMLAQUIZ_CLEANING_PARAMS="Cleaning params"
 COM_JOOMLAQUIZ_CLEANING_CLEANING="Clean database"
