Maked possible to set default values on question fields

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1113,3 +1113,11 @@ COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
+
+COM_JOOMLAQUIZ_SET_DEFAULT="Set Default"
+COM_JOOMLAQUIZ_DEFAULT_QUIESTIONS_POINTS="Default points"
+COM_JOOMLAQUIZ_DEFAULT_QUIESTIONS_ATTEMPTS"="Default attempts"
+COM_JOOMLAQUIZ_DEFAULT_ENABLE_QUESTIONS_FEEDBACK="Enable default feedback"
+COM_JOOMLAQUIZ_DEFAULT_F_WHEN_ANSWER_CORRECT="If the answer is correct, display:"
+COM_JOOMLAQUIZ_DEFAULT_F_WHEN_ANSWER_INCORRECT="If the answer is incorrect, display:"
+COM_JOOMLAQUIZ_DEFAULT_F_DETAILED_WHEN_ANSWER_INCORRECT="The detailed feedback If the answer is incorrect:"
