added 1 language constant and 1 tab to expert version

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1121,3 +1121,4 @@ COM_JOOMLAQUIZ_DEFAULT_ENABLE_QUESTIONS_FEEDBACK="Enable default feedback"
 COM_JOOMLAQUIZ_DEFAULT_F_WHEN_ANSWER_CORRECT="If the answer is correct, display:"
 COM_JOOMLAQUIZ_DEFAULT_F_WHEN_ANSWER_INCORRECT="If the answer is incorrect, display:"
 COM_JOOMLAQUIZ_DEFAULT_F_DETAILED_WHEN_ANSWER_INCORRECT="The detailed feedback If the answer is incorrect:"
+COM_JOOMLAQUIZ_QUIZ_DEFAULT_QUESTIONS_OPTIONS="Default fields"
