--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1126,3 +1126,5 @@ COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
+
+COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
