add certificate in lpath

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1056,6 +1056,7 @@ COM_JOOMLAQUIZ_CERT_ADD_SAMPLE_MESSAGE_ERROR = "Sample certs didn`t add"
 
 COM_JOOMLAQUIZ_LP_BE_JACTION_ACCESS="Learning path access"
 COM_JOOMLAQUIZ_LP_BE_JACTION_VIEW_ACCESS="Learning path access"
+COM_JOOMLAQUIZ_BE_JACTION_CERTIFICATE_LP="Learning path certificate access"
 COM_JOOMLAQUIZ_LP_BASIC_SETTINGS="Basic settings"
 COM_JOOMLAQUIZ_LP_PERMISSIONS_SETTINGS="Permissions settings"
 COM_JOOMLAQUIZ_LP_ACCESS_MSG="Learning path accessibility message"
@@ -1113,3 +1114,5 @@ COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
+COM_JOOMLAQUIZ_LEARNING_PATH_CERTIFICATE_LABEL="Certificate:"
+COM_JOOMLAQUIZ_LEARNING_PATH_CERTIFICATE_DESC="Certificate"
