--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1116,3 +1116,5 @@ COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 COM_JOOMLAQUIZ_LEARNING_PATH_CERTIFICATE_LABEL="Certificate:"
 COM_JOOMLAQUIZ_LEARNING_PATH_CERTIFICATE_DESC="Certificate"
+COM_JOOMLAQUIZ_LPATH_OPEN_ALL_QUIZZES_LABEL="Instant Access to All Steps"
+COM_JOOMLAQUIZ_LPATH_OPEN_ALL_QUIZZES_DESC="Enable this setting if you want users to be able to access all learning path's quizzes and articles at once. Otherwise, users need to complete the current step to open the next one."
