--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1129,5 +1129,7 @@ COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 COM_JOOMLAQUIZ_LEARNING_PATH_CERTIFICATE_LABEL="Certificate:"
 COM_JOOMLAQUIZ_LEARNING_PATH_CERTIFICATE_DESC="Certificate"
+COM_JOOMLAQUIZ_LPATH_OPEN_ALL_QUIZZES_LABEL="Instant Access to All Steps"
+COM_JOOMLAQUIZ_LPATH_OPEN_ALL_QUIZZES_DESC="Enable this setting if you want users to be able to access all learning path's quizzes and articles at once. Otherwise, users need to complete the current step to open the next one."
 
 COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
