The icons look cropped points for the correct answer

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -307,9 +307,9 @@ COM_JOOMLAQUIZ_WILL_BE_ON_THE="Select the check box to display the results panel
 COM_JOOMLAQUIZ_RESULTS_BY_CATEGORIES="Show results by categories:"
 COM_JOOMLAQUIZ_BE_INTEGRATED="Select the check box to group the results by question categories and show points received for every category"
 COM_JOOMLAQUIZ_SHOW_QUESTION_X_LABEL="Show 'Question X of Y' message:"
-COM_JOOMLAQUIZ_SHOW_QUESTION_X_DESC="Show 'Question X of Y' message"
+COM_JOOMLAQUIZ_SHOW_QUESTION_X_DESC="Enable this option to display a progress bar with current question number out of total number of questions"
 COM_JOOMLAQUIZ_SHOW_POINT_VALUE_LABEL="Show 'Point value X' message:"
-COM_JOOMLAQUIZ_SHOW_POINT_VALUE_DESC="Show 'Point value X' message"
+COM_JOOMLAQUIZ_SHOW_POINT_VALUE_DESC="Enable this option to show question points for correct answer on a progress bar"
 COM_JOOMLAQUIZ_SHOW_TIMER="Show timer:"
 COM_JOOMLAQUIZ_SHOW_TIMER_LABEL="Show timer:"
 COM_JOOMLAQUIZ_SHOW_TIMER_DESC="Show timer"
