Multiple Fill in the blank question with multiple own distractors

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -523,7 +523,8 @@ COM_JOOMLAQUIZ_PENALTY="Penalty %:"
 COM_JOOMLAQUIZ_ORDERING="Ordering:"
 COM_JOOMLAQUIZ_QUESTION_OPTIONSANSWERS="Question options (answers)"
 COM_JOOMLAQUIZ_BLANK="Blank"
-COM_JOOMLAQUIZ_CODE_FORQUESTION=", code for question text:"
+COM_JOOMLAQUIZ_CODE_FORQUESTION=", code for question text: "
+COM_JOOMLAQUIZ_CODE_FORQUESTION_BLANK_ALL_ANSWERS="'All answers of the block (Acceptable & Distractors)' - code for question text: "
 COM_JOOMLAQUIZ_CUSTOMCSS_CLASS="Custom CSS class:"
 COM_JOOMLAQUIZ_POINTS_FOR_EACHANSWER="Points for each answer"
 COM_JOOMLAQUIZ_SHARP="#"
