--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -92,7 +92,7 @@ COM_JOOMLAQUIZ_MANAGE_DASHBOARD_ITEMS="Manage Control Panel Items"
 COM_JOOMLAQUIZ_ABOUT_SAYTHANKSTITLE="Say your 'Thank you' to Joomla community for WonderFull Joomla CMS"
 COM_JOOMLAQUIZ_ABOUT_SAYTHANKS1="Say your 'Thank you' to Joomla community for WonderFull Joomla CMS and help it by sharing your experience with this component. It will only take 1 min for registration on"
 COM_JOOMLAQUIZ_ABOUT_SAYTHANKS2="and 3 minutes to write useful review! A lot of people will thank you! "
-COM_JOOMLAQUIZ_ABOUT_TEXT="This component manages Quizzes and Quiz Clients."
+COM_JOOMLAQUIZ_ABOUT_TEXT="This component manages Quizzes and Quiz Questions."
 COM_JOOMLAQUIZ_DASHBOARD_ITEMS_NONE="There are no Control Panel items"
 COM_JOOMLAQUIZ_DASHBOARD_ITEMS_NONE_A="Make a new one?"
 COM_JOOMLAQUIZ_DASHBOARD_ITEM_CREATING="Create Dashboard Item"
