add Email email introduction to Quiz and Quiz expert

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -298,6 +298,10 @@ COM_JOOMLAQUIZ_ALLOW_USER_TO_PRINT="Allow user to create a PDF report with resul
 COM_JOOMLAQUIZ_AN_ALLOWANCE_TO="Select the check box to display the link for report creation after the user finishes the quiz. The report can be saved to local machine or printed out"
 COM_JOOMLAQUIZ_ALLOW_USER_TO_EMAIL="E-mail results:"
 COM_JOOMLAQUIZ_CHOOSE_THE_APPROPRIATE="From the drop-down list, select the appropriate option for e-mailing quiz results, or leave it disabled"
+COM_JOOMLAQUIZ_USER_TO_INTRODUCTION="Email introduction:"
+COM_JOOMLAQUIZ_USER_TO_INTRODUCTION_DESC="Email introduction"
+COM_JOOMLAQUIZ_USER_TO_ENDING="Email ending:"
+COM_JOOMLAQUIZ_USER_TO_ENDING_DESC="Email ending"
 COM_JOOMLAQUIZ_SEND_EMAIL_WHEN="When user finishes quiz, send e-mail to:"
 COM_JOOMLAQUIZ_LIKE_TO_RECEIVE="Select the check box to allow sending the quiz results to the specified email(s), and then in the field type the comma-separated e-mails"
 COM_JOOMLAQUIZ_SEPARATED_WITH_COMMA="Separate the e-mails by commas"
