language constant added

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -711,6 +711,7 @@ COM_JOOMLAQUIZ_HOTSPOT="Hotspot"
 COM_JOOMLAQUIZ_SURVEYS="Surveys"
 COM_JOOMLAQUIZ_BOILERPLATE="Boilerplate"
 COM_JOOMLAQUIZ_MULTIPLE_QUESTION="Multiple Question"
+COM_JOOMLAQUIZ_CHOICE__4TH_GENERATION_="Case Based"
 COM_JOOMLAQUIZ_PLEASE_SELECT_AN_IMAGE="Please select an image to upload"
 COM_JOOMLAQUIZ_CATEGORY_WITH_THE_SAME="Category with the same title already exist.Please try again."
 COM_JOOMLAQUIZ_QUIZ_WITH_THE_SAME_TITLE="Quiz with the same title already exist.Please try again."
