add custom to www.swopepsych.com

--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -221,12 +221,14 @@ COM_QUIZ_ELAPSED_TIME="Elapsed Time: "
 COM_QUIZ_TIME_FOR_ANSWERING_HAS_RUN_OUT="Time for answering this question has run out"
 COM_QUIZ_FLAG_QUESTION="Flag Question"
 COM_JOOMLAQUIZ_DEFINE_USERNAME_PLEASE="Define User Name, please!"
+COM_JOOMLAQUIZ_DEFINE_CLASS_PERIOD_PLEASE="Define Class Period, please!"
 COM_JOOMLAQUIZ_DEFINE_USERSURNAME_PLEASE="Define User Surname, please!"
 COM_JOOMLAQUIZ_DEFINE_EMAIL="Define email, please!"
 COM_JOOMLAQUIZ_DEFINE_VALID_EMAIL="Input correct email please!"
 COM_JOOMLAQUIZ_INPUT_USER_NAME="Input your name: "
 COM_JOOMLAQUIZ_INPUT_USER_SURNAME="Input your surname: "
 COM_JOOMLAQUIZ_INPUT_USER_EMAIL="Input your email: "
+COM_JOOMLAQUIZ_INPUT_USER_CLASS_PERIOD="Input your class period: "
 COM_JQ_CERTIFICATE="Certificate"
 COM_JOOMLAQUIZ_DOWNLOAD="Download"
 COM_JOOMLAQUIZ_FE_NO_RIGHTS_VIEW_QUIZ="You are not allowed to access the quiz."
