--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -159,6 +159,7 @@ COM_STATISTICS_CORRECT="Correct"
 COM_STATISTICS_INCORRECT="Incorrect"
 COM_QUIZ_PDF_QTITLE="Quiz Title:"
 COM_QUIZ_PDF_UNAME="User Login:"
+COM_QUIZ_PDF_CLASS_PERIOD="Class Period:"
 COM_QUIZ_PDF_NAME="User Name:"
 COM_QUIZ_PDF_UEMAIL="User E-mail:"
 COM_QUIZ_PDF_USCORE="User Score:"
