the integration of hikashop with products is added

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -33,6 +33,7 @@ COM_JOOMLAQUIZ_SUBMENU_VIEW_DYNAMIC="Dynamic Report"
 COM_JOOMLAQUIZ_MENU_HELP="Help"
 COM_JOOMLAQUIZ_SUBMENU_HELP="Help"
 COM_JOOMLAQUIZ_SUBMENU_FAQ="F.A.Q."
+COM_JOOMLAQUIZ_CONFIGURATION="Joomla Quiz Deluxe: Settings"
 COM_JOOMLAQUIZ_POOL_RAND_DESCR="From drop-down list, select head category"
 COM_JOOMLAQUIZ_ADMINISTRATION_SUPPORT_FORUM="Support forum"
 COM_JOOMLAQUIZ_ADMINISTRATION_SUPPORT_DESC="Support desk"
@@ -387,6 +388,7 @@ COM_JOOMLAQUIZ_SELECT_VM="Select VM product or type the product name!"
 COM_JOOMLAQUIZ_RELATION="relation"
 COM_JOOMLAQUIZ_PRODUCT_NAME2="Product name:"
 COM_JOOMLAQUIZ_OR_SELECT_VM=" OR select VirtueMart product: "
+COM_JOOMLAQUIZ_OR_SELECT_HIKASHOP=" OR select HikaShop product: "
 COM_JOOMLAQUIZ_QUIZZES="Quizzes:"
 COM_JOOMLAQUIZ_ACCESS_TO_COURSE="Access to course for"
 COM_JOOMLAQUIZ_X_DAYS="x days"
@@ -792,6 +794,8 @@ COM_JOOMLAQUIZ_SHOW_QUESTION_FEEDBACK_LABEL="Show feedbacks for questions on res
 COM_JOOMLAQUIZ_SHOW_QUESTION_FEEDBACK_DESC="Show feedbacks for questions on results page"
 
 COM_JOOMLAQUIZ_SELECT_CATEGORY="- Select Category -"
+COM_JOOMLAQUIZ_SELECT_VIRTUEMART_CATEGORY="- Select Virtuemart Category -"
+COM_JOOMLAQUIZ_SELECT_HIKASHOP_CATEGORY="- Select HikaShop Category -"
 COM_JOOMLAQUIZ_NEW_ITEMS_DEFAULT="New Items default to the first place. Ordering can be changed after this Item is saved."
 COM_JOOMLAQUIZ_NEXT_BUTTON="Next"
 COM_JOOMLAQUIZ_CANCEL_BUTTON="<td id='toolbar-cancel' class='button'><a onclick='javascript: parent.tb_remove();' href='#' class='toolbar'><span title='Cancel' class='icon-32-cancel'></span>Cancel</a></td>"
