--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -301,8 +301,10 @@ COM_JOOMLAQUIZ_CHOOSE_THE_APPROPRIATE="From the drop-down list, select the appro
 COM_JOOMLAQUIZ_SEND_EMAIL_WHEN="When user finishes quiz, send e-mail to:"
 COM_JOOMLAQUIZ_LIKE_TO_RECEIVE="Select the check box to allow sending the quiz results to the specified email(s), and then in the field type the comma-separated e-mails"
 COM_JOOMLAQUIZ_SEPARATED_WITH_COMMA="Separate the e-mails by commas"
-COM_JOOMLAQUIZ_ENABLE_SLIDE_PANEL="Enable results panel:"
-COM_JOOMLAQUIZ_WILL_BE_ON_THE="Select the check box to display the results panel to users when they take the quiz. Any time during the quiz the user can click this link and view all the quiz questions and the result for the ones already answered"
+COM_JOOMLAQUIZ_CSLIDE_LABEL="Enable Questions Panel:"
+COM_JOOMLAQUIZ_CSLIDE_DESC="Select the check box to display the Questions Panel to users when they take the quiz. Any time during the quiz the user can click this link and view all the quiz questions and the result for the ones already answered"
+COM_JOOMLAQUIZ_CSLIDE_SHOW_RESULTS_LABEL="Show answer accuracy:"
+COM_JOOMLAQUIZ_CSLIDE_SHOW_RESULTS_DESC="Show if user's answer is correct or not on the Questions Panel"
 COM_JOOMLAQUIZ_RESULTS_BY_CATEGORIES="Show results by categories:"
 COM_JOOMLAQUIZ_BE_INTEGRATED="Select the check box to group the results by question categories and show points received for every category"
 COM_JOOMLAQUIZ_SHOW_QUESTION_X_LABEL="Show 'Question X of Y' message:"
