--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -199,8 +199,8 @@ COM_QUIZ_RESULTS="Quiz Results"
 COM_QUIZ_EXPAND_ALL="Expand all"
 COM_QUIZ_COLLAPSE_ALL="Collapse all"
 COM_QUIZ_LEGEND_QUESTION="Question"
-COM_QUIZ_HIDE_RESULT_PANEL="Hide Results Panel"
-COM_QUIZ_SHOW_RESULT_PANEL="Show Results Panel"
+COM_QUIZ_HIDE_RESULT_PANEL="Hide Questions Panel"
+COM_QUIZ_SHOW_RESULT_PANEL="Show Questions Panel"
 COM_JOOMLAQUIZ_NO_COUNT_QUESTIONS="Message for admin: Please go to "Quiz settings > Question Pool Options" to specify amount questions from category"
 COM_JOOMLAQUIZ_NOQUESTIONS_IN_POOL="Message for admin: Please go to "Questions Pool" to specify questions for Questions Pool"
 COM_JOOMLAQUIZ_NOQUESTIONS_IN_QUIZ="Message for admin: Please go to "Question Management" to specify questions for quiz"
