added result by tags

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -306,6 +306,8 @@ COM_JOOMLAQUIZ_ENABLE_SLIDE_PANEL="Enable results panel:"
 COM_JOOMLAQUIZ_WILL_BE_ON_THE="Select the check box to display the results panel to users when they take the quiz. Any time during the quiz the user can click this link and view all the quiz questions and the result for the ones already answered"
 COM_JOOMLAQUIZ_RESULTS_BY_CATEGORIES="Show results by categories:"
 COM_JOOMLAQUIZ_BE_INTEGRATED="Select the check box to group the results by question categories and show points received for every category"
+COM_JOOMLAQUIZ_RESULTS_BY_TAGS_LABEL="Show results by tags:"
+COM_JOOMLAQUIZ_RESULTS_BY_TAGS_DESC="Select the check box to group the results by question tags and show points received for every tag"
 COM_JOOMLAQUIZ_SHOW_QUESTION_X_LABEL="Show 'Question X of Y' message:"
 COM_JOOMLAQUIZ_SHOW_QUESTION_X_DESC="Show 'Question X of Y' message"
 COM_JOOMLAQUIZ_SHOW_POINT_VALUE_LABEL="Show 'Point value X' message:"
