possibility to choose questions in the quiz from Question Pool by tagsÐ

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -363,9 +363,14 @@ COM_JOOMLAQUIZ_NUMBER_OF_QUESTIONS="Number of questions(for random questions):"
 COM_JOOMLAQUIZ_RANDOM_QUESTIONS="Random questions"
 COM_JOOMLAQUIZ_TAKEN_FROM_THE="Select this option to take random questions from the Question Pool. Then specify the number of questions to be taken. Note: if the quiz itself has 5 questions and 25 questions are taken from the Question Pool, the quiz will have 30 questions in total"
 COM_JOOMLAQUIZ_BY_CATEGORIES="By categories:"
+COM_JOOMLAQUIZ_BY_TAGS="By tags:"
 COM_JOOMLAQUIZ_BY_CATEGORIES_LABEL="By categories:"
 COM_JOOMLAQUIZ_BY_CATEGORIES_DESC="By categories"
 COM_JOOMLAQUIZ_LIKE_THE_QUESTIONS="Select this option to take from the Question Pool only questions from particular categories. Then specify the number of questions to be taken from each category"
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_LABEL="Quantity by tags"
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_DESC="Please indicate the number of questions for each tag."
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_OPTIONS_QTY_LABEL="Quantity"
+COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_OPTIONS_QTY_DESC="Quantity by tags"
 COM_JOOMLAQUIZ_METADATA_INF="Metadata"
 COM_JOOMLAQUIZ_PAGE_META_DESCR="Select the check box to replace the quiz page meta-description with the following meta-description"
 COM_JOOMLAQUIZ_KEYWORDS="Keywords:"
