--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -93,6 +93,8 @@ COM_QUIZ_MES_NOTAVAIL="Sorry, this option is not available now."
 COM_QUIZ_MES_NOTPASSED="Sorry, you have not passed the quiz."
 COM_QUIZ_CERT_TOTAL="with a total score of"
 COM_QUIZ_CERT_PERCENT="percent"
+COM_QUIZ_CERT_OUT_OF="out of"
+COM_QUIZ_CERT_POINTS="points"
 COM_QUIZ_NOT_AVAILABLE="<font color=red><strong>This quiz is not available now. Please try again later.</strong></font>"
 COM_LPATH_FOR_REGISTERED="<font color=red><strong>The learning path is for registered users only. Please log in to access it.</strong></font>"
 COM_NOT_SUBSCRIBED="<font color=red><strong>This is a paid quiz. You did not subscribe for it.</strong></font>"
