#447 A possibility to insert only the score field in the certificate and not the percentage (reg_answer) is required.

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -554,6 +554,7 @@ COM_JOOMLAQUIZ_AFTER_YOU_HAVE_UPLOADED="* After you have uploaded a new picture,
 COM_JOOMLAQUIZ_IF_YOU_WANT_TOUPLOAD="* If you want to upload a lot of pictures use FTP and upload them into '<em>images/joomlaquiz/images</em>'."
 COM_JOOMLAQUIZ_YOU_CAN_USE_THEFOLLOWING="* You can use the following constants:
 								'#name#' and '#username#' - to enter name and username of student,#course# - to enter name of quiz,
+                                                                '#points#' - to enter the score user received,
 								'#reg_answer#' - to enter the score user received and its percentage out of the maximum allowed,
 								'#date#' - to enter current date.
 								Also you can use date formats, ex.- '#date(Y-m-d)#' outputs '2007-01-01'; '#date(d F Y)#' outputs '01 January 2007'. See our help for more details.
