adding tags when importing questions from csv

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -371,6 +371,8 @@ COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_LABEL="Quantity by tags"
 COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_DESC="Please indicate the number of questions for each tag."
 COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_OPTIONS_QTY_LABEL="Quantity"
 COM_JOOMLAQUIZ_QUIZ_POOL_BY_TAGS_OPTIONS_QTY_DESC="Quantity by tags"
+COM_JOOMLAQUIZ_QUESTIONS_UPLOADQUESTIONS_CSV_TAG1="tag1|tag2"
+COM_JOOMLAQUIZ_QUESTIONS_UPLOADQUESTIONS_CSV_TAG2="tag2|tag4"
 COM_JOOMLAQUIZ_METADATA_INF="Metadata"
 COM_JOOMLAQUIZ_PAGE_META_DESCR="Select the check box to replace the quiz page meta-description with the following meta-description"
 COM_JOOMLAQUIZ_KEYWORDS="Keywords:"
