added a reminder when importing quiz about the separate transfer of media resources inserted into the description of the quiz or into the description of the quiz questions

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -900,8 +900,10 @@ COM_JOOMLAQUIZ_EXTENSION_OF_THIS_FILE="Extension of this file not supported."
 COM_JOOMLAQUIZ_ZLIB_LIBRARY="Error! zlib library unavailable"
 COM_JOOMLAQUIZ_NOT_FIND_COURSE="Could not find a Course XML setup file in the package."
 COM_JOOMLAQUIZ_QUIZES_SUCCESSFULY_IMPORT="Quizzes have been imported successfully. "
+COM_JOOMLAQUIZ_QUIZ_SUCCESSFULY_IMPORT="The quiz has successfully imported. "
 COM_JOOMLAQUIZ_QUIZES_QUIZZES=" quizzes '"
 COM_JOOMLAQUIZ_AFTER_IMPORT="' after import. "
+COM_JOOMLAQUIZ_AFTER_IMPORT_TRANSFER_MEDIA="<br>If the description of quiz or the description of quiz questions contains links to media resources, do not forget to transfer them to this site in the appropriate directories too."
 COM_JOOMLAQUIZ_CONFIG_DETAILS="The Configuration Details have been updated"
 COM_JOOMLAQUIZ_PUBLICH_QUESTIONS="publish questions"
 COM_JOOMLAQUIZ_UNPUBLISH_QUESTIONS="unpublish questions"
