change of styles of some system messages, fix of notices

--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -58,7 +58,7 @@ COM_JQ_RESULT_PASSED="Passed"
 COM_JQ_RESULT_FAILED="Failed"
 COM_JQ_NA="N/A"
 COM_QUIZ_EMAILTO_PROMPT="Please specify the e-mail to send the quiz results to:"
-COM_QUIZ_MES_EMAIL_OK="E-mail was sent successfully"
+COM_QUIZ_MES_EMAIL_OK="<span class=\"msg_email_sent_success\">E-mail was sent successfully</span>"
 COM_QUIZ_MES_EMAIL_FAIL="Failed to send e-mail"
 COM_QUIZ_LPATH_NOT_AVAILABLE="<font color=red><strong>This quiz or course is not available now. Please try again later.</strong></font>"
 COM_QUIZ_RES_MES_SCORE_TPL="%s out of %s (%s%%)"
