Change description of layouts

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.sys.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.sys.ini
@@ -18,16 +18,16 @@ COM_JOOMLAQUIZ_MENU_CAT_LAYOUT_DESCR="Use this layout to create menu item for a 
 COM_JOOMLAQUIZ_QCATEGORY_VIEW_DEFAULT_TITLE="Standard Category Quiz Layout"
 
 COM_JOOMLAQUIZ_MENU_QUIZ_LAYOUT="Standard Quiz Layout"
-COM_JOOMLAQUIZ_MENU_QUIZ_LAYOUT_DESCR="Use this layout to create menu item for some quiz."
+COM_JOOMLAQUIZ_MENU_QUIZ_LAYOUT_DESCR="Use this layout to create menu item for a single quiz."
 
 COM_JOOMLAQUIZ_MENU_LPATH_LAYOUT="Standard Learning Path Layout"
 COM_JOOMLAQUIZ_MENU_LPATH_LAYOUT_DESCR="Use this layout to create menu item for a learning path."
 
 COM_JOOMLAQUIZ_MENU_LPATHS_LAYOUT="Standard Learning Paths Layout"
-COM_JOOMLAQUIZ_MENU_LPATHS_LAYOUT_DESCR="Use this layout to create menu item for a learning paths."
+COM_JOOMLAQUIZ_MENU_LPATHS_LAYOUT_DESCR="Use this layout to create menu item for a list of learning paths."
 
 COM_JOOMLAQUIZ_MENU_PACKEGES_LAYOUT="Standard Quiz Packages Layout"
-COM_JOOMLAQUIZ_MENU_PACKEGES_LAYOUT_DESCR="Use this layout to create menu item to show list of user's packages."
+COM_JOOMLAQUIZ_MENU_PACKEGES_LAYOUT_DESCR="Use this layout to create menu item to show a list of user's packages."
 
 COM_JOOMLAQUIZ_MENU_STATISTICS_LAYOUT="Standard Quiz Statistics Layout"
 COM_JOOMLAQUIZ_MENU_STATISTICS_LAYOUT_DESCR="Use this layout to create menu item to show of user's statistics."
@@ -46,7 +46,7 @@ JOOMLAQUIZ_QUIZ_VIEW_DEFAULT_TITLE="Standard Quiz Layout"
 COM_JOOMLAQUIZ_QUIZ_VIEW_DEFAULT_TITLE="Standard Quiz Layout"
 
 COM_JOOMLAQUIZ_MENU_RESULTS_LAYOUT="Standard Quiz Results Layout"
-COM_JOOMLAQUIZ_MENU_RESULTS_LAYOUT_DESCR="Use this layout to create menu item to show user's results."
+COM_JOOMLAQUIZ_MENU_RESULTS_LAYOUT_DESCR="Use this layout to create menu item to show user's results statistics."
 
 JOOMLAQUIZ_RESULTS_VIEW_DEFAULT_TITLE="Standard Quiz Results Layout"
 COM_JOOMLAQUIZ_RESULTS_VIEW_DEFAULT_TITLE="Standard Quiz Results Layout"
