--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -97,7 +97,7 @@ COM_QUIZ_CERT_OUT_OF="out of"
 COM_QUIZ_CERT_POINTS="points"
 COM_QUIZ_NOT_AVAILABLE="<font color=red><strong>This quiz is not available now. Please try again later.</strong></font>"
 COM_LPATH_FOR_REGISTERED="<font color=red><strong>The learning path is for registered users only. Please log in to access it.</strong></font>"
-COM_NOT_SUBSCRIBED="<font color=red><strong>This is a paid quiz. You did not subscribe for it.</strong></font>"
+COM_NOT_SUBSCRIBED="<font color=red><strong>This is a paid quiz. If you have purchased it, you can access it in the list of purchased quizzes on the respective page.</strong></font>"
 COM_ACCESS_EXPIRED="<font color=red><strong>Your access has expired.</strong></font>"
 COM_ACCESS_NO_ATTEMPTS="<font color=red><strong>You have no attempts left to pass this quiz.</strong></font>"
 COM_QUIZ_MINUTES="minute(s)"
