fix help url in com_categories

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -3,6 +3,7 @@
 ; @copyright	Copyright Copyright (C) JoomPlace, www.joomplace.com
 ; @license		GNU/GPL http://www.gnu.org/copyleft/gpl.html
 
+COM_JOOMLAQUIZ_HELP_URL = "https://www.joomplace.com/video-tutorials-and-documentation/joomla-quiz-deluxe-3.0/index.html"
 COM_JOOMLAQUIZ_COMPONENT="Joomla Quiz Deluxe"
 COM_JOOMLAQUIZ_ADMINISTRATION_ABOUT="Joomla Quiz Deluxe: About"
 COM_JOOMLAQUIZ_MENU_ABOUT="About"
