--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -94,6 +94,7 @@ COM_QUIZ_MES_NOTAVAIL="Sorry, this option is not available now."
 COM_QUIZ_MES_NOTPASSED="Sorry, you have not passed the quiz."
 COM_QUIZ_CERT_TOTAL="with a total score of"
 COM_QUIZ_CERT_PERCENT="percent"
+COM_QUIZ_CERT_PERCENT_SYMBOL="%"
 COM_QUIZ_CERT_OUT_OF="out of"
 COM_QUIZ_CERT_POINTS="points"
 COM_QUIZ_NOT_AVAILABLE="<font color=red><strong>This quiz is not available now. Please try again later.</strong></font>"
