added an explanation when creating a hotspot type question in the admin panel

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -998,6 +998,7 @@ COM_JOOMLAQUIZ_NOTIFICMES1="Please, "
 COM_JOOMLAQUIZ_NOTIFICMES2="answer some questions"
 COM_JOOMLAQUIZ_NOTIFICMES3=" to help improve the component. Thank you!"
 COM_JOOMLAQUIZ_CREATEHOTSPOT="Create/Edit hotspot"
+COM_JOOMLAQUIZ_CREATEEXTHOTSPOT_CLOSE_CONTOUR="When creating a hotspot, it is necessary to close the contour by clicking on the first point as the last point."
 
 COM_JOOMLAQUIZ_CREATEANEWONE="Make a new one?"
 COM_JOOMLAQUIZ_NOQUIZZESCREATED="No quizzes created. "
