custom issue 586 - initial commit

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1129,3 +1129,28 @@ COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 
 COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
+
+# usercategories
+COM_JOOMLAQUIZ_ADMINISTRATION_USERCATEGORIES="Assign users to quiz categories"
+COM_JOOMLAQUIZ_USERCATEGORIES_TITLE="Assign users to quiz categories"
+COM_JOOMLAQUIZ_SUBMENU_USERCATEGORIES="User Assignment"
+COM_JOOMLAQUIZ_USERCATEGORIES_BUTTON_ASSIGN="Assign"
+COM_JOOMLAQUIZ_USERCATEGORIES_BUTTON_UNASSIGN="UnAssign"
+COM_JOOMLAQUIZ_USERCATEGORIES_BUTTON_NOTIFY="Notify"
+COM_JOOMLAQUIZ_USERCATEGORIES_VIEW_NAME_CATEGORY="Category: "
+COM_JOOMLAQUIZ_USERCATEGORIES_VIEW_SELECT_USERS="Select users to assign: "
+COM_JOOMLAQUIZ_USERCATEGORIES_VIEW_THEAD_USERID="UserId"
+COM_JOOMLAQUIZ_USERCATEGORIES_VIEW_THEAD_USERNAME="Name"
+COM_JOOMLAQUIZ_USERCATEGORIES_VIEW_THEAD_NOTIFIED="Notified"
+
+COM_JOOMLAQUIZ_USERCATEGORIES_MODEL_SELECT_CATEGORY="-Select Category-"
+COM_JOOMLAQUIZ_USERCATEGORIES_ERROR_NOT_PERMITTED="You have no rights to this action."
+COM_JOOMLAQUIZ_USERCATEGORIES_ERROR_NOT_DATA="No data."
+COM_JOOMLAQUIZ_USERCATEGORIES_ERROR_NO_ASSIGN="Error assign users to quiz categories."
+COM_JOOMLAQUIZ_USERCATEGORIES_SUCCESS_ASSIGN="The success of assigning users to quiz categories."
+COM_JOOMLAQUIZ_USERCATEGORIES_ERROR_NO_UNASSIGN="Error unassign users to quiz categories."
+COM_JOOMLAQUIZ_USERCATEGORIES_SUCCESS_UNASSIGN="The success of unassigning users to quiz categories."
+
+
+
+
