--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.sys.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.sys.ini
@@ -58,3 +58,7 @@ JOOMLAQUIZ_NEW_QUEST_VIEW_DEFAULT_TITLE="New Question From"
 COM_JOOMLAQUIZ_NEW_QUEST_VIEW_DEFAULT_TITLE="New Question From"
 
 COM_JOOMLAQUIZ_UNINSTALL_TEXT = "Component Quiz Deluxe successfully uninstalled."
+
+# usercategories
+COM_JOOMLAQUIZ_MENU_RESULTSCATEGORY_LAYOUT="Standard Quiz Results by Category"
+COM_JOOMLAQUIZ_MENU_RESULTSCATEGORY_LAYOUT_DESCR="Use this layout to create menu item to show user's results statistics by category."
