--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -273,3 +273,9 @@ COM_JOOMLAQUIZ_MEMORY_NOTSTARTED="Are you sure you want to give up without even 
 
 COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
 COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
+
+#custom586
+#resultscategory
+COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_TITLE="Your quizzes results for: "
+COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_NO_RESULTS="There are no results to display."
+COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_RESULTS_DESCR="Click the quiz name to view the detailed results for the attempt."
