in the admin panel in the report of results, a view of not started quizzes is added

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1151,6 +1151,4 @@ COM_JOOMLAQUIZ_USERCATEGORIES_SUCCESS_ASSIGN="The success of assigning users to 
 COM_JOOMLAQUIZ_USERCATEGORIES_ERROR_NO_UNASSIGN="Error unassign users to quiz categories."
 COM_JOOMLAQUIZ_USERCATEGORIES_SUCCESS_UNASSIGN="The success of unassigning users to quiz categories."
 
-
-
-
+COM_JOOMLAQUIZ_RESULTS_FILTERPASSED_OPTION_NOTSTARTED="- Not started -"
