--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -279,3 +279,5 @@ COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
 COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_TITLE="Your quizzes results for: "
 COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_NO_RESULTS="There are no results to display."
 COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_RESULTS_DESCR="Click the quiz name to view the detailed results for the attempt."
+COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_OPTION_STARTED="- started quizzes -"
+COM_JOOMLAQUIZ_VIEW_RESULTSCATEGORY_OPTION_NOTSTARTED="- not started quizzes -"
