initial commit custom 551

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1129,3 +1129,6 @@ COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
 COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 
 COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
+
+COM_JOOMLAQUIZ_QUIZ_PDF_CERTIFICATE_TO_EMAIL_LABEL="E-mail PDF Certificate"
+COM_JOOMLAQUIZ_QUIZ_PDF_CERTIFICATE_TO_EMAIL_DESC="From the drop-down list, select the appropriate option for e-mailing PDF Certificate, or leave it disabled"
