--- a/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/site/language/en-GB.com_joomlaquiz.ini
@@ -273,3 +273,11 @@ COM_JOOMLAQUIZ_MEMORY_NOTSTARTED="Are you sure you want to give up without even 
 
 COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
 COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
+
+COM_QUIZ_FIN_BTN_EMAIL_PDF_CERTIFICATE="E-mail Certificate"
+COM_QUIZ_MES_EMAIL_PDF_CERTIFICATE_OK="<span class=\"msg_email_sent_success\">E-mail was sent successfully</span>"
+COM_QUIZ_MES_EMAIL_PDF_CERTIFICATE_FAIL="Failed to send e-mail"
+COM_QUIZ_EMAIL_PDF_CERTIFICATE_SUBJECT="Certificate of quiz"
+COM_QUIZ_EMAIL_PDF_CERTIFICATE_MESSAGE="Certificate of passing the quiz in the attached file."
+
+
