initial commit custom 551 standart version

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -1114,3 +1114,8 @@ COM_QUIZ_ALREADY_PASSED="You have already passed this quiz."
 COM_JOOMLAQUIZ_ONE_TIME="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_LABEL="Hide passed quizzes:"
 COM_JOOMLAQUIZ_ONE_TIME_DESC="Hide passed quizzes"
+
+COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_LABEL="E-mail PDF Certificate"
+COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_DESC="From the drop-down list, select the appropriate option for e-mailing PDF Certificate, or leave it disabled"
+COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_OPTION0="- disable this option -"
+COM_JOOMLAQUIZ_QUIZ_EMAIL_PDF_CERTIFICATE_OPTION1="- enable this option -"
