--- a/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/site/language/en-GB.com_joomlaquiz.ini
@@ -270,3 +270,9 @@ COM_JOOMLAQUIZ_SHORTCODE_ADJUSTER="89"
 
 COM_JOOMLAQUIZ_LPS_NOT_AVAILABLE="None learning path is available"
 COM_JOOMLAQUIZ_LPS_MENU_ITEM="List of all available learning paths"
+
+COM_QUIZ_FIN_BTN_EMAIL_PDF_CERTIFICATE="E-mail Certificate"
+COM_QUIZ_MES_EMAIL_PDF_CERTIFICATE_OK="<span class=\"msg_email_sent_success\">E-mail was sent successfully</span>"
+COM_QUIZ_MES_EMAIL_PDF_CERTIFICATE_FAIL="Failed to send e-mail"
+COM_QUIZ_EMAIL_PDF_CERTIFICATE_SUBJECT="Certificate of quiz"
+COM_QUIZ_EMAIL_PDF_CERTIFICATE_MESSAGE="Certificate of passing the quiz in the attached file."
