Added the user's email to reactivates view

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -698,6 +698,7 @@ COM_JOOMLAQUIZ_ORDER="Order"
 COM_JOOMLAQUIZ_PRODUCTS="Products"
 COM_JOOMLAQUIZ_ORDER_STATUS="Order status"
 COM_JOOMLAQUIZ_USER_NAME="User name"
+COM_JOOMLAQUIZ_USER_EMAIL="User email"
 COM_JOOMLAQUIZ_LIST_OF_QUIZZES="List of quizzes and learning paths to reactivate"
 COM_JOOMLAQUIZ_RESTRICTIONS="Restrictions"
 COM_JOOMLAQUIZ_RESET="Reset"
