Added centering of text in X-axis certificates

--- a/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz/admin/language/en-GB.com_joomlaquiz.ini
@@ -616,6 +616,7 @@ COM_JOOMLAQUIZ_FONTSIZE="Font-size"
 COM_JOOMLAQUIZ_OFFSET="Offset"
 COM_JOOMLAQUIZ_TEXT_FIELD="Text field"
 COM_JOOMLAQUIZ_SHADOW="Shadow"
+COM_JOOMLAQUIZ_TEXT_X_ALIGN_CENTER="Text X align center"
 COM_JOOMLAQUIZ_TEXT_X="Text X"
 COM_JOOMLAQUIZ_TEXT_Y="Text Y"
 COM_JOOMLAQUIZ_FONT_SIZE="Font size"
