initial commit custom 663

--- a/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
+++ b/com_joomlaquiz_expert/admin/language/en-GB.com_joomlaquiz.ini
@@ -1130,10 +1130,10 @@ COM_JOOMLAQUIZ_LEARNING_PATH_CATEGORY="Learning Path Category:"
 
 COM_JOOMLAQUIZ_SET_DEFAULT="Set default question's fields"
 
-# usercategories
+# usercategories and userquiz
 COM_JOOMLAQUIZ_ADMINISTRATION_USERCATEGORIES="Assign users to quiz categories"
 COM_JOOMLAQUIZ_USERCATEGORIES_TITLE="Assign users to quiz categories"
-COM_JOOMLAQUIZ_SUBMENU_USERCATEGORIES="User Assignment"
+COM_JOOMLAQUIZ_SUBMENU_USERCATEGORIES="User Assignment by Category"
 COM_JOOMLAQUIZ_USERCATEGORIES_BUTTON_ASSIGN="Assign"
 COM_JOOMLAQUIZ_USERCATEGORIES_BUTTON_UNASSIGN="UnAssign"
 COM_JOOMLAQUIZ_USERCATEGORIES_BUTTON_NOTIFY="Notify"
@@ -1152,3 +1152,22 @@ COM_JOOMLAQUIZ_USERCATEGORIES_ERROR_NO_UNASSIGN="Error unassign users to quiz ca
 COM_JOOMLAQUIZ_USERCATEGORIES_SUCCESS_UNASSIGN="The success of unassigning users to quiz categories."
 
 COM_JOOMLAQUIZ_RESULTS_FILTERPASSED_OPTION_NOTSTARTED="- Not started -"
+
+COM_JOOMLAQUIZ_ADMINISTRATION_USERQUIZ="Assign users to quiz"
+COM_JOOMLAQUIZ_SUBMENU_USERQUIZ="User Assignment by Quiz"
+COM_JOOMLAQUIZ_USERQUIZ_MODEL_SELECT_QUIZ="-Select Quiz-"
+COM_JOOMLAQUIZ_USERQUIZ_ERROR_NOT_PERMITTED="You have no rights to this action."
+COM_JOOMLAQUIZ_USERQUIZ_ERROR_NOT_DATA="No data."
+COM_JOOMLAQUIZ_USERQUIZ_ERROR_NO_ASSIGN="Error assign users to quiz."
+COM_JOOMLAQUIZ_USERQUIZ_SUCCESS_ASSIGN="The success of assigning users to quiz."
+COM_JOOMLAQUIZ_USERQUIZ_ERROR_NO_UNASSIGN="Error unassign users to quiz."
+COM_JOOMLAQUIZ_USERQUIZ_SUCCESS_UNASSIGN="The success of unassigning users to quiz."
+COM_JOOMLAQUIZ_USERQUIZ_BUTTON_ASSIGN="Assign"
+COM_JOOMLAQUIZ_USERQUIZ_BUTTON_UNASSIGN="UnAssign"
+COM_JOOMLAQUIZ_USERQUIZ_BUTTON_NOTIFY="Notify"
+COM_JOOMLAQUIZ_USERQUIZ_TITLE="Assign users to quiz"
+COM_JOOMLAQUIZ_USERQUIZ_VIEW_NAME_QUIZ="Quiz: "
+COM_JOOMLAQUIZ_USERQUIZ_VIEW_SELECT_USERS="Select users to assign: "
+COM_JOOMLAQUIZ_USERQUIZ_VIEW_THEAD_USERID="UserId"
+COM_JOOMLAQUIZ_USERQUIZ_VIEW_THEAD_USERNAME="Name"
+COM_JOOMLAQUIZ_USERQUIZ_VIEW_THEAD_NOTIFIED="Notified"
